ch9/ch9-suggestions-exercise/iac-macro-usage/tests/fails/lambda_typo.stderr
error: only 'bucket' and 'lambda' resources are supported. Is this a typo for lambda?
 --> tests/fails/lambda_typo.rs:5:9
  |
5 |         lamba name
  |         ^^^^^
